# StockMarket

./: .gitignore  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml
src/: __init__.py  config.py
src/blueprints/: routes.py
src/core_logic/: alert.py
src/core_logic/mmi/: mmi_provider.py
src/services/: mmi_trigger.py
src/utils/: formatting.py  logger_config.py
